RESOLVED FIXED52375
Crash in Widget::setFrameRect()
https://bugs.webkit.org/show_bug.cgi?id=52375
Summary Crash in Widget::setFrameRect()
mitz
Reported 2011-01-13 10:05:31 PST
Crash in Widget::setFrameRect()
Attachments
Protect the Widget from deletion when calling out to the platform widget (6.48 KB, patch)
2011-01-13 10:12 PST, mitz
simon.fraser: review+
mitz
Comment 1 2011-01-13 10:11:56 PST
mitz
Comment 2 2011-01-13 10:12:41 PST
Created attachment 78822 [details] Protect the Widget from deletion when calling out to the platform widget
mitz
Comment 3 2011-01-13 10:21:52 PST
Note You need to log in before you can comment on or make changes to this bug.