<rdar://problem/8098442> Crash in Widget::setFrameRect() https://bugs.webkit.org/show_bug.cgi?id=52375

Reviewed by Simon Fraser.

Source/WebCore:

Test: plugins/destroy-on-setwindow.html

* platform/mac/WidgetMac.mm:
(WebCore::Widget::setFrameRect): Protect the Widget from being deleted as a result of calling
out to the view.
(WebCore::Widget::getOuterView): Coding style fix.
(WebCore::Widget::paint): Protect the Widget from being deleted as a result of calling out to
the views. This is precautionary, since this function does not applear to access member variables
after such calls.
* platform/wx/WidgetWx.cpp:
(WebCore::Widget::setFrameRect): Protect the Widget from being deleted as a result of calling
out to the platform widget.

LayoutTests:

* plugins/destroy-on-setwindow-expected.txt: Added.
* plugins/destroy-on-setwindow.html: Added.



Canonical link: https://commits.webkit.org/65985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75720 268f45cc-cd09-0410-ab3c-d52691b4dbfc